--- a/etch-a-sketch/styles.css
+++ b/etch-a-sketch/styles.css
@@ -1,7 +1,12 @@
 .container{
-  display:flex;
+  display: flex;
+  height: 300px;
+  width: 300px;
 }
 
+.grid-row{
+  display: flex;
+}
 .grid-box{
   width: 50px;
   height: 50px;
